# sondera-coding-agent-hooks

./: .gitignore  Cargo.toml  README.md  sondera
.github/workflows/: ci.yml
apps/benchmark/: Cargo.toml
apps/benchmark/src/: main.rs
apps/opencode/: Cargo.toml
apps/opencode/src/: main.rs
benchmarks/: corpus.jsonl  results-vertex_gemini-2.5-flash-20260628T141602.json  results-vertex_gemini-2.5-flash-20260628T141942.json  results-vertex_gpt-oss-safeguard-200-20260628T154105.json  results-vertex_gpt-oss-safeguard-20b-20260628T142705.json  results-vertex_gpt-oss-safeguard-20b-v2-20260628T144456.json  results-vertex_gpt-oss-safeguard-final-20260628T172737.json  results-vertex_gpt-oss-safeguard-tuned-20260628T174242.json  results-vertex_gpt-oss-safeguard-v2-20260628T175903.json  results-zai_glm-4.5-flash-200-20260628T151608.json  results-zai_glm-4.5-flash-200v2-20260628T155214.json  results-zai_glm-4.5-flash-deep-20260628T164921.json  results-zai_glm-4.5-flash-v2-20260628T144214.json  results-zai_glm-4.5-flash-v3-20260628T145229.json  results-zai_glm-4.5-flash-v4-20260628T145637.json  results-zai_glm-4.5-flash-v5-20260628T145923.json  results-zai_glm-4.6-thinking-disabled-20260628T135828.json  results-zai_glm-5-turbo-20260628T135503.json  results-zai_glm-5.2-20260628T140204.json  run.sh  sweep.sh
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/config/tests/: precedence.rs
crates/guardrails/ifc/: Cargo.toml
crates/guardrails/ifc/src/: label.rs  lib.rs
crates/guardrails/ifc/tests/: llm_integration.rs
crates/guardrails/llm/: Cargo.toml
crates/guardrails/llm/src/: anthropic.rs  lib.rs  openai_compat.rs  schema.rs  vertex.rs
crates/guardrails/llm/tests/: mock_backend.rs
crates/guardrails/policy/: Cargo.toml
crates/guardrails/policy/src/: lib.rs  policy.rs
crates/guardrails/policy/tests/: llm_integration.rs
crates/harness/: Cargo.toml
crates/harness/src/: rpc.rs
crates/harness/src/cedar/: combined.rs  mod.rs  transform.rs  vector.rs
crates/harness/tests/: trajectory_label_persistence.rs
docs/: architecture.md  configuration.md  deployment.md  development.md  guardrails.md  hooks.md  llm-engagement.md  policies.md
plugins/opencode/: PROTOCOL.md  README.md  install.sh  package.json
plugins/opencode/src/: client.ts  config.test.ts  config.ts  index.test.ts  index.ts  integration.test.ts
policies/: ifc.toml  policies.toml
