[package]
name = "sondera-llm"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Multi-provider structured-output LLM client for Sondera guardrail classifiers"
authors.workspace = true
repository.workspace = true

[dependencies]
gcp_auth = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
schemars = { version = "1.2", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
